--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,9 +1,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.qr_reader">
+<uses-permission android:name="android.permission.QUERY_ALL_PACKAGES"/>
    <application
         android:label="qr_reader"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+        <meta-data android:name="com.google.android.geo.API_KEY"
+               android:value="AIzaSyAUA4GAdHSbrEylYCgGAUlIf--Z3whiAA0"/>
         <activity
             android:name=".MainActivity"
             android:exported="true"
